structural changes to accomodate flask

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
           <div class="logo-wrapper">
             <img
               src="{{ url_for('static', filename='logo.png') }}"
-              alt="Rizvi Logo"
-              class="logo-img"
+              alt="Logo"
             />
           </div>
           <div class="brand-text">
