--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
           <div class="logo-wrapper">
             <img
               src="{{ url_for('static', filename='logo.png') }}"
-              alt="Logo"
+              alt="Rizvi Logo"
+              class="logo-img"
             />
           </div>
           <div class="brand-text">
